@@ -3760,7 +3760,7 @@ GF_Err moov_on_child_box(GF_Box *s, GF_Box *a, Bool is_rem)
 			GF_TrackBox *tk = (GF_TrackBox *)a;
 			//set our pointer to this obj
 			tk->moov = ptr;
-			tk->index = gf_list_count(ptr->trackList);
+			tk->index = 1+gf_list_count(ptr->trackList);
 			if (tk->References) {
 				GF_TrackReferenceTypeBox *dpnd=NULL;
 				Track_FindRef(tk, GF_ISOM_REF_BASE, &dpnd);
